--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,1 +1,71 @@
 <app-header></app-header>
+
+<main>
+    <section class="section-about">
+        <div class="center-text">
+            <h2 class="heading-secondary margin-bottom-big">
+                Exciting tours for adventurous people
+            </h2>
+        </div>
+
+        <div class="container">
+            <div class="row">
+                <div class="col">
+                    <h3 class="heading-tertiary margin-bottom-small">You're going to fall in love with our culture</h3>
+                    <p class="paragraph">
+                        A land of captivating contrasts and rich cultural tapestry waiting to be unraveled. Nestled between the azure waters of the Caribbean Sea and the mighty Pacific Ocean, Mexico invites you to delve into its diverse landscapes, ancient history, and vibrant traditions.
+                    </p>
+
+                    <h3 class="heading-tertiary margin-bottom-small">Live adventures like you never have before</h3>
+                    <p class="paragraph">
+                        Pack your bags and embark on an unforgettable journey to Mexico, where history, culture, and adventure collide. Every moment is a celebration of life.
+                    </p>
+
+                    <a href="#" class="btn-text">Learn more &rarr;</a>
+                </div>
+                <div class="col" style="align-self: flex-start;">
+                    <div class="composition">
+                        <img class="composition__photo composition__photo--p1" src="/assets/pyramid.jpeg" alt="photo1">
+                        <img class="composition__photo composition__photo--p2" src="/assets/puerto.jpeg" alt="photo2">
+                        <img class="composition__photo composition__photo--p3" src="/assets/pueblos.jpeg" alt="photo3">
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section class="section-features">
+        <div class="container center-text">
+            <div class="row">
+                <div class="col">
+                    <div class="card">
+                        <i class="icon-basic-world card__icon"></i>
+                        <h3 class="heading-tertiary">Explore the country</h3>
+                        <p class="card__text">Explore the breathtaking landscapes, from stunning beaches to ancient ruins!</p>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="card">
+                        <i class="icon-basic-compass card__icon"></i>
+                        <h3 class="heading-tertiary">Meet nature</h3>
+                        <p class="card__text">Escape to paradise and relax in the serene beauty of Mexico's natural wonders!</p>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="card">
+                        <i class="icon-basic-map card__icon"></i>
+                        <h3 class="heading-tertiary">Find your way</h3>
+                        <p class="card__text">Select your own path, from Pueblos Magicos to modern destinations!</p>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="card">
+                        <i class="icon-basic-heart card__icon"></i>
+                        <h3 class="heading-tertiary">Enjoy live</h3>
+                        <p class="card__text">Experience the warmth and hospitality of the Mexican people!</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+</main>
