Adding Tours section

--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -38,34 +38,147 @@
         <div class="container center-text">
             <div class="row">
                 <div class="col">
-                    <div class="card">
-                        <i class="icon-basic-world card__icon"></i>
+                    <div class="feature">
+                        <i class="icon-basic-world feature__icon"></i>
                         <h3 class="heading-tertiary">Explore the country</h3>
-                        <p class="card__text">Explore the breathtaking landscapes, from stunning beaches to ancient ruins!</p>
+                        <p class="feature__text">Explore the breathtaking landscapes, from stunning beaches to ancient ruins!</p>
                     </div>
                 </div>
                 <div class="col">
-                    <div class="card">
-                        <i class="icon-basic-compass card__icon"></i>
+                    <div class="feature">
+                        <i class="icon-basic-compass feature__icon"></i>
                         <h3 class="heading-tertiary">Meet nature</h3>
-                        <p class="card__text">Escape to paradise and relax in the serene beauty of Mexico's natural wonders!</p>
+                        <p class="feature__text">Escape to paradise and relax in the serene beauty of Mexico's natural wonders!</p>
                     </div>
                 </div>
                 <div class="col">
-                    <div class="card">
-                        <i class="icon-basic-map card__icon"></i>
+                    <div class="feature">
+                        <i class="icon-basic-map feature__icon"></i>
                         <h3 class="heading-tertiary">Find your way</h3>
-                        <p class="card__text">Select your own path, from Pueblos Magicos to modern destinations!</p>
+                        <p class="feature__text">Select your own path, from Pueblos Magicos to modern destinations!</p>
                     </div>
                 </div>
                 <div class="col">
-                    <div class="card">
-                        <i class="icon-basic-heart card__icon"></i>
+                    <div class="feature">
+                        <i class="icon-basic-heart feature__icon"></i>
                         <h3 class="heading-tertiary">Enjoy live</h3>
-                        <p class="card__text">Experience the warmth and hospitality of the Mexican people!</p>
+                        <p class="feature__text">Experience the warmth and hospitality of the Mexican people!</p>
                     </div>
                 </div>
             </div>
+        </div>
+    </section>
+
+    <section class="section-tours">
+        <div class="center-text">
+            <h2 class="heading-secondary margin-bottom-big">
+                Most popular tours
+            </h2>
+        </div>
+
+        <div class="container">
+            <div class="row">
+                <div class="col">
+                    <div class="card center-text">
+                        <div class="card__side card__side--front">
+                            <div class="card__picture card__picture--1">
+                                &nbsp;
+                            </div>
+                            <h4 class="card__heading">
+                                <span class="card__heading-span card__heading-span--1">
+                                    Magic Towns Explorer 
+                                </span>
+                            </h4>
+                            <div class="card__details">
+                                <ul>
+                                    <li class="card__item">3 days tour</li>
+                                    <li class="card__item">3 Magic Towns</li>
+                                    <li class="card__item">Up to 10 people</li>
+                                    <li class="card__item">Sleep in traditional hotels</li>
+                                    <li class="card__item">Difficulty: Medium</li>
+                                </ul>
+                            </div>
+                        </div>
+                        <div class="card__side card__side--back card__side--back-1">
+                            <div class="card__cta">
+                                <div class="card__price-box">
+                                    <p class="card__price-only">Only</p>
+                                    <p class="card__price-value">$299</p>
+                                </div>
+                                <a href="#" class="btn btn--white">Book now</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="card center-text">
+                        <div class="card__side card__side--front">
+                            <div class="card__picture card__picture--2">
+                                &nbsp;
+                            </div>
+                            <h4 class="card__heading">
+                                <span class="card__heading-span card__heading-span--2">
+                                    The Nature Explorer 
+                                </span>
+                            </h4>
+                            <div class="card__details">
+                                <ul>
+                                    <li class="card__item">4 days tour</li>
+                                    <li class="card__item">4 cenotes</li>
+                                    <li class="card__item">Up to 15 people</li>
+                                    <li class="card__item">Sleep around trees</li>
+                                    <li class="card__item">Difficulty: Hard</li>
+                                </ul>
+                            </div>
+                        </div>
+                        <div class="card__side card__side--back card__side--back-2">
+                            <div class="card__cta">
+                                <div class="card__price-box">
+                                    <p class="card__price-only">Only</p>
+                                    <p class="card__price-value">$399</p>
+                                </div>
+                                <a href="#" class="btn btn--white">Book now</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="card center-text">
+                        <div class="card__side card__side--front">
+                            <div class="card__picture card__picture--3">
+                                &nbsp;
+                            </div>
+                            <h4 class="card__heading">
+                                <span class="card__heading-span card__heading-span--3">
+                                    The Sea Explorer 
+                                </span>
+                            </h4>
+                            <div class="card__details">
+                                <ul>
+                                    <li class="card__item">5 days tour</li>
+                                    <li class="card__item">Multiple destinations</li>
+                                    <li class="card__item">Up to 20 people</li>
+                                    <li class="card__item">Sleep in cozy hotels</li>
+                                    <li class="card__item">Difficulty: Easy</li>
+                                </ul>
+                            </div>
+                        </div>
+                        <div class="card__side card__side--back card__side--back-3">
+                            <div class="card__cta">
+                                <div class="card__price-box">
+                                    <p class="card__price-only">Only</p>
+                                    <p class="card__price-value">$499</p>
+                                </div>
+                                <a href="#" class="btn btn--white">Book now</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="center-text margin-top-huge">
+            <a href="#" class="btn btn--green">Discover all tours</a>
         </div>
     </section>
 </main>
