--- a/src/app/components/header/header.component.scss
+++ b/src/app/components/header/header.component.scss
@@ -8,6 +8,7 @@
         url('../../../assets/background.webp');
     background-position: top;
     background-size: cover;
+    -webkit-clip-path: polygon(0% 0%, 100% 0%, 100% 80%, 50% 100%, 0% 80%);
     clip-path: polygon(0 0, 100% 0, 100% 75%, 0 100%);
     height: 95vh;
     position: relative;
