--- a/src/app/pages/home/home.component.scss
+++ b/src/app/pages/home/home.component.scss
@@ -5,12 +5,8 @@
 .section-about {
     background-color: var(--color-grey-light-1);
     padding: 25rem 0;
-    margin-top: -25vh;
+    margin-top: -20rem;
 }
-
-// .section-about > * {
-//     transform: rotate(-8deg)
-// }
 
 .composition {
     position: relative;
@@ -53,11 +49,11 @@
 }
 
 // FEATURES SECTION
+
 .section-features {
-    // height: 80vh;
     margin-top: -25rem;
     padding: 30rem 0;
-    clip-path: polygon(0 30%, 100% 0, 100% 70%, 0 100%);
+    clip-path: polygon(0 25%, 100% 0, 100% 75%, 0 100%);
     background-size: cover;
     background-position: bottom;
     background-image: linear-gradient(
@@ -67,7 +63,8 @@
         url('../../../assets/cenote.webp');
 }
 
-.card {
+.feature {
+    width: 24rem;
     background-color: rgba(#fff, .8);
     padding: 2.5rem;
     border-radius: 10px;
@@ -90,5 +87,171 @@
 
     &:hover {
         transform: translateY(-1.5rem) scale(1.03);
+    }
+}
+
+// TOURS SECTION
+
+.section-tours {
+    background-color: var(--color-grey-light-1);
+    padding: 30rem 0 15rem 0;
+    margin-top: -30rem;
+}
+
+.card {
+    perspective: 150rem;
+    -moz-perspective: 150rem;
+    position: relative;
+    height: 52rem;
+
+    &__side {
+        background-color: orangered;
+        font-size: 2rem;
+        height: 52rem;
+        transition: all .8s ease;
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        backface-visibility: hidden;
+        border-radius: 10px;
+        box-shadow: 0 1.5rem 4rem rgba(#000000, .15);
+        overflow: hidden;
+
+        &--front {
+            background-color: white;
+        }
+
+        &--back {
+            background-color: green;
+            transform: rotateY(180deg);
+
+            &-1 {
+                background-image: linear-gradient(to right bottom, var(--color-secondary-light), var(--color-secondary-dark));
+            }
+
+            &-2 {
+                background-image: linear-gradient(to right bottom, var(--color-primary-light), var(--color-primary-dark));
+            }
+
+            &-3 {
+                background-image: linear-gradient(to right bottom, var(--color-tertiary-light), var(--color-tertiary-dark));
+            }
+        }
+    }
+
+    &__picture {
+        background-size: cover;
+        height: 23rem;
+        background-blend-mode: screen;
+        -webkit-clip-path: polygon(0% 0%, 100% 0%, 100% 80%, 50% 100%, 0% 80%);
+        clip-path: polygon(0% 0%, 100% 0%, 100% 80%, 50% 100%, 0% 80%);
+
+        &--1 {
+            background-image: 
+                linear-gradient(to right bottom, var(--color-secondary-light), var(--color-secondary-dark)),
+                url(../../../assets/sanmiguel.avif);
+        }
+
+        &--2 {
+            background-image: 
+                linear-gradient(to right bottom, var(--color-primary-light), var(--color-primary-dark)),
+                url(../../../assets/cenote.jpeg);
+        }
+
+        &--3 {
+            background-image: 
+                linear-gradient(to right bottom, var(--color-tertiary-light), var(--color-tertiary-dark)),
+                url(../../../assets/cancun.jpg);
+        }
+    }
+
+    &__heading {
+        font-size: 2.8rem;
+        font-weight: 300;
+        text-transform: uppercase;
+        text-align: left;
+        color: var(--color-white);
+        position: absolute;
+        top: 1rem;
+        left: 2rem;
+        width: 70%;
+        // right: 2rem;
+    }
+
+    &__heading-span {
+        padding: .2rem;
+
+        &--1 {
+            background-image: linear-gradient(
+                to right bottom, 
+                rgba($color-secondary-light, .8), 
+                rgba($color-secondary-dark, .8));
+        }
+
+        &--2 {
+            background-image: linear-gradient(
+                to right bottom, 
+                rgba($color-primary-light, .8), 
+                rgba($color-primary-dark, .8));
+        }
+
+        &--3 {
+            background-image: linear-gradient(
+                to right bottom, 
+                rgba($color-tertiary-light, .8), 
+                rgba($color-tertiary-dark, .8));
+        }
+    }
+
+    &__details {
+        padding: 3rem;
+
+        ul {
+            list-style: none;
+            width: 80%;
+            margin: 0 auto;
+
+            li {
+                text-align: center;
+                font-size: 1.5rem;
+                padding: 1rem;
+                
+                &:not(:last-child) {
+                    border-bottom: 1px solid #eee;
+                }
+            }
+        }
+    }
+
+    &__cta {
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+    }
+
+    &__price-box {
+        text-align: center;
+        margin-bottom: 8rem;
+        color: white;
+    }
+
+    &__price-only {
+        font-size: 1.4rem;
+        text-transform: uppercase;
+    }
+
+    &__price-value {
+        font-size: 6rem;
+        font-weight: 100;
+    }
+
+    &:hover &__side--front {
+        transform: rotateY(-180deg);
+    }
+
+    &:hover &__side--back {
+        transform: rotateY(0);
     }
 }
