Adding Stories section

--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -181,4 +181,57 @@
             <a href="#" class="btn btn--green">Discover all tours</a>
         </div>
     </section>
+
+    <section class="section-stories">
+        <div class="bg-video">
+            <video class="bg-video__content" autoplay muted loop>
+                <source src="/assets/video.mp4" type="video/mp4">
+                <source src="/assets/video.webm" type="video/webm">
+                Your browser is not supported!
+            </video>
+        </div>
+
+        <div class="center-text">
+            <h2 class="heading-secondary margin-bottom-big">
+                We Make People Genuinely Happy
+            </h2>
+        </div>
+
+        <div class="container">
+            <div class="row">
+                <div class="col">
+                    <div class="story">
+                        <figure class="story__shape">
+                            <img class="story__img" src="assets/person1.jpg" alt="First review">
+                            <figcaption class="story__caption">John Doe</figcaption>
+                        </figure>
+                        <div class="story__text">
+                            <h3 class="heading-tertiary margin-bottom-small">I HAD THE BEST WEEK EVER WITH MY FAMILY!</h3>
+                            <p>Overall, my journey exceeded all expectations. Whether you're a seasoned traveler or venturing to Mexico for the first time, I wholeheartedly recommend entrusting your adventure with them. With their expertise and dedication to excellence, they'll ensure that your Mexican getaway is nothing but extraordinary.</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="container margin-top-big">
+            <div class="row">
+                <div class="col">
+                    <div class="story">
+                        <figure class="story__shape">
+                            <img class="story__img" src="assets/person2.jpg" alt="Second review">
+                            <figcaption class="story__caption">Jane Doe</figcaption>
+                        </figure>
+                        <div class="story__text">
+                            <h3 class="heading-tertiary margin-bottom-small">BEST TOURS IN THE COUNTRY!</h3>
+                            <p>If you're dreaming of immersing yourself in the vibrant culture, rich history, and breathtaking landscapes of Mexico, look no further than here. I recently had the pleasure of embarking on one of their tours, and it was an unforgettable adventure from start to finish. Totally recommended.</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="center-text margin-top-huge">
+            <a href="#" class="btn-text">Read all stories &rarr;</a>
+        </div>
+    </section>
 </main>
