Adding Form section

--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -234,4 +234,14 @@
             <a href="#" class="btn-text">Read all stories &rarr;</a>
         </div>
     </section>
+
+    <section class="section-book">
+        <div class="container">
+            <div class="row">
+                <div class="col">
+                    <app-form></app-form>
+                </div>
+            </div>
+        </div>
+    </section>
 </main>
