--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -5,7 +5,7 @@
 
     <div class="header__text-box">
         <h1 class="heading-primary">
-            <span class="heading-primary--main">Mexpedition</span>
+            <span class="heading-primary--main">Mexpeditions</span>
             <span class="heading-primary--secondary">Explore Mexico with us</span>
         </h1>
 
