--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -244,4 +244,14 @@
             </div>
         </div>
     </section>
+
+    <section class="section-footer">
+        <div class="container">
+            <div class="row">
+                <div class="col">
+                    <app-footer></app-footer>
+                </div>
+            </div>
+        </div>
+    </section>
 </main>
