--- a/src/app/pages/home/home.component.scss
+++ b/src/app/pages/home/home.component.scss
@@ -343,3 +343,9 @@
     padding: 15rem 0;
     background-image: linear-gradient(to right, $color-primary-light, $color-primary-dark);
 }
+
+.section-footer {
+    background-color: var(--color-grey-dark-3);
+    padding: 8rem 0;
+    font-size: 1.4;
+}
