Adding responsiveness and last details

--- a/src/app/components/form/form.component.html
+++ b/src/app/components/form/form.component.html
@@ -1,7 +1,7 @@
 <div class="book">
     <div class="book__box">
         <form class="form" action="#">
-            <h2 class="heading-secondary margin-bottom-medium">Start booking now</h2>
+            <h2 class="heading-secondary margin-bottom-medium" style="width: 100%;">Start booking now</h2>
             <div class="form__group">
                 <input class="form__input" type="text" placeholder="Full Name" id="name" required>
                 <label class="form__label" for="name">Full Name</label>
