--- a/src/app/components/footer/footer.component.scss
+++ b/src/app/components/footer/footer.component.scss
@@ -1,10 +1,25 @@
+@import "../../../styles.scss";
+
 .footer {
     font-size: 1.4rem;
     color: var(--color-grey-light-1);
 
+    @include respond(phone){
+        font-size: 1rem;
+    }
+
     &__container {
         display: flex;
-        justify-content: space-between;
+        justify-content: center;
+        flex-wrap: wrap;
+
+        @include respond(tab-land){
+            padding: 0 3rem;
+        }
+
+        @include respond(tab-port){
+            justify-content: center;
+        }
     }
 
     &__logo {
@@ -54,5 +69,8 @@
     &__copyright {
         border-top: .7px solid var(--color-grey-light-2);
         padding-top: 1.5rem;
+        border: none;
+            width: 80vw;
+            text-align: center;
     }
 }
