--- a/src/app/components/form/form.component.scss
+++ b/src/app/components/form/form.component.scss
@@ -1,3 +1,5 @@
+@import "../../../styles.scss";
+
 .book {
     box-shadow: 0 1.5rem 4rem rgba($color: #000000, $alpha: .15);
     background-image: 
@@ -8,9 +10,23 @@
     border-radius: 10px;
     height: 50rem;
 
+    @include respond(phone){
+        height: 55rem;
+    }
+
+    @include respond(tab-land){
+        background-image: 
+        linear-gradient(105deg, rgba(255,255,255, .8) 100%, transparent 50%),
+        url(../../../assets/form-img.jpeg);
+    }
+
     &__box {
         width: 50%;
         padding: 6rem;
+
+        @include respond(tab-land){
+            width: 100%;
+        }
     }
 }
 
