--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -9,6 +9,6 @@
             <span class="heading-primary--secondary">Explore Mexico with us</span>
         </h1>
 
-        <a class="btn btn--white btn--animated" href="#">Discover our tours</a>
+        <a class="btn btn--white btn--animated" (click)="scroll()">Discover our tours</a>
     </div>
 </header>
