--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -10,7 +10,7 @@
 
         <div class="container">
             <div class="row">
-                <div class="col">
+                <div class="col content-col--1">
                     <h3 class="heading-tertiary margin-bottom-small">You're going to fall in love with our culture</h3>
                     <p class="paragraph">
                         A land of captivating contrasts and rich cultural tapestry waiting to be unraveled. Nestled between the azure waters of the Caribbean Sea and the mighty Pacific Ocean, Mexico invites you to delve into its diverse landscapes, ancient history, and vibrant traditions.
@@ -23,7 +23,7 @@
 
                     <a href="#" class="btn-text">Learn more &rarr;</a>
                 </div>
-                <div class="col" style="align-self: flex-start;">
+                <div class="col content-col--2">
                     <div class="composition">
                         <img class="composition__photo composition__photo--p1" src="/assets/pyramid.jpeg" alt="photo1">
                         <img class="composition__photo composition__photo--p2" src="/assets/puerto.jpeg" alt="photo2">
@@ -37,28 +37,28 @@
     <section class="section-features">
         <div class="container center-text">
             <div class="row">
-                <div class="col">
+                <div>
                     <div class="feature">
                         <i class="icon-basic-world feature__icon"></i>
                         <h3 class="heading-tertiary">Explore the country</h3>
                         <p class="feature__text">Explore the breathtaking landscapes, from stunning beaches to ancient ruins!</p>
                     </div>
                 </div>
-                <div class="col">
+                <div>
                     <div class="feature">
                         <i class="icon-basic-compass feature__icon"></i>
                         <h3 class="heading-tertiary">Meet nature</h3>
                         <p class="feature__text">Escape to paradise and relax in the serene beauty of Mexico's natural wonders!</p>
                     </div>
                 </div>
-                <div class="col">
+                <div>
                     <div class="feature">
                         <i class="icon-basic-map feature__icon"></i>
                         <h3 class="heading-tertiary">Find your way</h3>
                         <p class="feature__text">Select your own path, from Pueblos Magicos to modern destinations!</p>
                     </div>
                 </div>
-                <div class="col">
+                <div>
                     <div class="feature">
                         <i class="icon-basic-heart feature__icon"></i>
                         <h3 class="heading-tertiary">Enjoy live</h3>
@@ -78,7 +78,7 @@
 
         <div class="container">
             <div class="row">
-                <div class="col">
+                <div>
                     <div class="card center-text">
                         <div class="card__side card__side--front">
                             <div class="card__picture card__picture--1">
@@ -110,7 +110,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col">
+                <div>
                     <div class="card center-text">
                         <div class="card__side card__side--front">
                             <div class="card__picture card__picture--2">
@@ -142,7 +142,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col">
+                <div>
                     <div class="card center-text">
                         <div class="card__side card__side--front">
                             <div class="card__picture card__picture--3">
@@ -206,7 +206,7 @@
                             <figcaption class="story__caption">John Doe</figcaption>
                         </figure>
                         <div class="story__text">
-                            <h3 class="heading-tertiary margin-bottom-small">I HAD THE BEST WEEK EVER WITH MY FAMILY!</h3>
+                            <h3 class="heading-tertiary margin-bottom-small">I HAD AN AWESOME WEEK WITH MY FAMILY!</h3>
                             <p>Overall, my journey exceeded all expectations. Whether you're a seasoned traveler or venturing to Mexico for the first time, I wholeheartedly recommend entrusting your adventure with them. With their expertise and dedication to excellence, they'll ensure that your Mexican getaway is nothing but extraordinary.</p>
                         </div>
                     </div>
@@ -222,7 +222,7 @@
                             <figcaption class="story__caption">Jane Doe</figcaption>
                         </figure>
                         <div class="story__text">
-                            <h3 class="heading-tertiary margin-bottom-small">BEST TOURS IN THE COUNTRY!</h3>
+                            <h3 class="heading-tertiary margin-bottom-small">BEST TOURS AND PRICES!</h3>
                             <p>If you're dreaming of immersing yourself in the vibrant culture, rich history, and breathtaking landscapes of Mexico, look no further than here. I recently had the pleasure of embarking on one of their tours, and it was an unforgettable adventure from start to finish. Totally recommended.</p>
                         </div>
                     </div>
@@ -238,9 +238,7 @@
     <section class="section-book">
         <div class="container">
             <div class="row">
-                <div class="col">
-                    <app-form></app-form>
-                </div>
+                <app-form></app-form>
             </div>
         </div>
     </section>
