--- a/src/app/pages/home/home.component.scss
+++ b/src/app/pages/home/home.component.scss
@@ -5,7 +5,36 @@
 .section-about {
     background-color: var(--color-grey-light-1);
     padding: 25rem 0;
-    margin-top: -20rem;
+    margin-top: -24vh;
+}
+
+.content-col {
+    &--1 {
+        min-width: 53rem;
+
+        @include respond(tab-land){
+            padding: 0 5rem;
+        }
+
+        @include respond(phone){
+            min-width: 40rem;
+        }
+    }
+
+    &--2 {
+        align-self: flex-start;
+        min-width: 53rem;
+        height: 33rem;
+        max-width: 70rem;
+
+        @include respond(tab-land){
+            padding: 0 3rem;
+        }
+
+        @include respond(phone){
+            min-width: 40rem;
+        }
+    }
 }
 
 .composition {
@@ -27,7 +56,7 @@
 
         &--p2 {
             top: 2rem;
-            right: -2rem;
+            right: 0;
         }
 
         &--p3 {
@@ -61,6 +90,10 @@
         rgba($color-primary-light, 0.8), 
         rgba($color-primary-dark, 0.8)), 
         url('../../../assets/cenote.webp');
+
+    @include respond(phone){
+        clip-path: polygon(0 10%, 100% 0, 100% 90%, 0 100%);
+    }
 }
 
 .feature {
@@ -103,6 +136,7 @@
     -moz-perspective: 150rem;
     position: relative;
     height: 52rem;
+    width: 30rem;
 
     &__side {
         background-color: orangered;
@@ -274,6 +308,10 @@
     font-size: 1.6rem;
     transform: skewX(-12deg);
 
+    @include respond(phone){
+        transform: none;
+    }
+
     &__shape {
         width: 15rem;
         height: 15rem;
@@ -284,6 +322,10 @@
         clip-path: circle(50% at 50% 50%);
         transform: translateX(-3rem) skewX(12deg);
         position: relative;
+
+        @include respond(phone){
+            transform: translateX(-2rem);
+        }
     }
 
     &__img {
@@ -295,6 +337,10 @@
 
     &__text {
         transform: skewX(12deg);
+
+        @include respond(phone){
+            transform: none;
+        }
     }
 
     &__caption {
@@ -342,6 +388,14 @@
 .section-book {
     padding: 15rem 0;
     background-image: linear-gradient(to right, $color-primary-light, $color-primary-dark);
+
+    app-form {
+        width: 100%;
+
+        @include respond(tab-land){
+            width: 80%;
+        }
+    }
 }
 
 .section-footer {
