--- a/src/app/components/form/form.component.scss
+++ b/src/app/components/form/form.component.scss
@@ -1,4 +1,4 @@
-@import "../../../styles.scss";
+@import "../../../variables.scss";
 
 .book {
     box-shadow: 0 1.5rem 4rem rgba($color: #000000, $alpha: .15);
