--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,3 +1,4 @@
+@import "variables.scss";
 /* You can add global styles to this file, and also import other style files */
 // Color Scheme
 
@@ -16,47 +17,6 @@
     --color-grey-dark-2: #999;
     --color-grey-dark-3: #333;
     --color-white: #fff;
-}
-
-$color-primary: #55c57a;
-$color-primary-light: #7ed56f;
-$color-primary-dark: #28b485;
-$color-secondary-light: #ffb900;
-$color-secondary-dark: #ff7730;
-$color-tertiary-light: #2998ff;
-$color-tertiary-dark: #5643fa;
-
-
-// Media Query Manager
-// 0 600px -> Phone
-// 600px 900px -> Tablet portrait
-// 900px 1200px -> Tablet landscape
-// [1200px - 1800px] -> Normal styles
-// +1800px -> Big desktop
-
-/*
-    $breakpoint argument choices:
-    - phone
-    - tab-port
-    - tab-land
-    - big-desktop
-*/
-
-// 1em = 16px
-
-@mixin respond($breakpoint) {
-    @if $breakpoint == phone {
-        @media (max-width: 37.5em) { @content };    //600px
-    }
-    @if $breakpoint == tab-port {
-        @media (max-width: 56.25em) { @content };     //900px
-    }
-    @if $breakpoint == tab-land {
-        @media (max-width: 75em) { @content };    //1200px
-    }
-    @if $breakpoint == big-desktop {
-        @media (min-width: 112.5em) { @content };    //1800px
-    }
 }
 
 // Browser reset for all HTML elements
